# pods

./: .gitignore  environment.yml  pyproject.toml  requirements.txt  sync.py
.github/workflows/: bilibili.yml  clean-up.yml  keepalive.yml  scheduler.yml  single.yml  sync.yml  youtube.yml
config/: bilibili.json  youtube.json
podsync/: base.py  bilibili.py  clean-up.py  github.py  podcast.py  refresh-opml.py  scheduler.py  utils.py  youtube.py
scripts/: de-duplicate-xml.py  fetch-release.sh  get-cookies.py  remove-failed-bilibili.py
tubesync/: github.py  main.py  podcast.py  refresh-opml.py  tubesync.py  utils.py  youtube.py
