[tool.poetry]
authors = ["hfpods4085 <166705635+hfpods4085@users.noreply.github.com>"]
description = ""
name = "podsync"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dateparser = ">=1.2.0"
feedparser = ">=6.0.11"
python = "^3.11"
videogram = { url = "https://github.com/hfpods4085/pods/releases/download/videogram/videogram-0.3.2.tar.gz" }
xmltodict = ">=0.13.0"
yt-dlp = ">=2024.8.6"

[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pyright]
extraPaths = ["podsync"]
